# todo.txt-gtd

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tdtbackup  tdtcleanup  tdtcleanup.py  tdtlist
completions/: project  tdtlist  tdtproj
deb/: index.html  makeindex.py  tdtgtd_0.1_all.deb  tdtgtd_0.2_all.deb
debian/: 50-gtdcleanup  changelog  clean  control  copyright  counttodo.1.md  gtdcleanup.1.md  gtdcleanup.launch  project.1.md  project.launch  rules  tdtgtd.bash-completion  tdtgtd.install  tdtgtd.links  todo.txt-gtd.bash-completion  todo.txt-gtd.links  todo.txt-gtd.manpages
debian/tests/: control  pytest.sh
debian/upstream/: metadata
tdtgtd/: rst2odt.py  tdtbackup.py  tdtcleanup.py  tdtlist.py  tdtproj.py  template.odt  utils.py
test/: conftest.py  test_backup.py  test_cleanup.py  test_count.py  test_list.py  test_utils.py
test/cases/: addprojtotask.in  addprojtotask.out  addprojtotask.tasks  comprehensive-notail.in  comprehensive-notail.out  comprehensive-notail.tasks  comprehensive.in  comprehensive.out  comprehensive.tasks  dos2unix.in  dos2unix.out  dos2unix.tasks  earlytaskprob.in  earlytaskprob.out  earlytaskprob.tasks  initialrun.in  initialrun.out  initialrun.tasks  mktask.py  newproj.in  newproj.out  newproj.tasks  noproj.in  noproj.tasks  noprojnocurr.in  noprojnocurr.out  noprojnocurr.tasks  nospace.in  nospace.out  nospace.tasks  notaheader.in  notaheader.out  notaheader2.in  notaheader2.out  notaheader2.tasks  null.out  (+17 more)
todo_txt_gtd/: tdtcleanup.py  tdtcount.py  tdtproj.py  utils.py
